Update remaining .html references to .php
- Update template files to reference .php pages
- Update build scripts to generate .php files
- Update policy pages to link to index.php
- Update backup login files to reference index.php
- All JavaScript files now properly reference .php pages
- Navigation system fully functional across all pages

--- a/login_backup.html
+++ b/login_backup.html
@@ -521,7 +521,7 @@
 <div id="authModal" class="auth-modal hidden">
   <div class="auth-modal-content">
     <div style="text-align: center; margin-bottom: 16px;">
-      <a href="index.html" style="color: #667eea; text-decoration: none; font-size: 14px;">← Back to Home</a>
+      <a href="index.php" style="color: #667eea; text-decoration: none; font-size: 14px;">← Back to Home</a>
     </div>
     <h1 style="margin: 0;"><img src="images/logo.png" alt="MemoWindow" style="width: 280px; height: 50px;"></h1>
     <p>Transform precious voice recordings of your loved ones into beautiful waveform art. Create lasting visual memories that you can frame, share, and treasure forever.</p>
