--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -168,8 +168,8 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="index.html" class="logo">MemoWindow</a>
-            <a href="index.html" class="back-link">
+            <a href="index.php" class="logo">MemoWindow</a>
+            <a href="index.php" class="back-link">
                 ← Back to Home
             </a>
         </nav>
