--- a/login_new.html
+++ b/login_new.html
@@ -647,7 +647,7 @@
   <!-- Header -->
   <header class="header">
     <nav class="nav">
-      <a href="index.html" class="logo">
+      <a href="index.php" class="logo">
         <img src="images/logo.png" alt="MemoWindow">
       </a>
       <div id="userInfo" class="user-info hidden">
