--- a/test_system.html
+++ b/test_system.html
@@ -187,7 +187,7 @@
     <script type="module">
         // Import necessary modules
         import { uploadWaveformFiles, uploadToFirebaseStorage } from './src/storage.js';
-        import { getCurrentUser } from './src/app-auth.js';
+        import unifiedAuth from './src/unified-auth.js';
 
         let testStats = {
             total: 0,
