Revert to working version from server
🔄 REVERT:
- Removed unified authentication system files (unified_auth.php, src/unified-auth.js, test_unified_auth.php)
- Reverted all modified files to working versions from server
- Removed Reactor directory and other unused files
- Back to stable, working authentication system

✅ RESULT:
- Application should now work as it did before
- No more authentication issues
- Clean working state restored

--- a/test_system.html
+++ b/test_system.html
@@ -187,7 +187,7 @@
     <script type="module">
         // Import necessary modules
         import { uploadWaveformFiles, uploadToFirebaseStorage } from './src/storage.js';
-        import unifiedAuth from './src/unified-auth.js';
+        import { getCurrentUser } from './src/app-auth.js';
 
         let testStats = {
             total: 0,
